--- a/vue-black-dashboard-master/package.json
+++ b/vue-black-dashboard-master/package.json
@@ -14,12 +14,13 @@
   },
   "dependencies": {
     "chart.js": "^2.7.3",
+    "firebase": "^7.14.1",
     "register-service-worker": "^1.5.2",
     "vue": "^2.6.6",
     "vue-chartjs": "^3.4.0",
     "vue-i18n": "^8.8.1",
     "vue-resource": "^1.5.1",
-    "vue-router": "^3.0.2",
+    "vue-router": "^3.1.6",
     "vue-router-prefetch": "^1.4.0",
     "vue2-transitions": "^0.2.3"
   },
