--- a/App-Portal/package.json
+++ b/App-Portal/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "Career_Portal",
-  "version": "1.0.0",
+  "name": "Application_Portal",
+  "version": "1.0.1",
   "private": true,
-  "description": "Career Portal for Academics and Career Council, IITK",
+  "description": "Application Portal for Academics and Career Council, IITK",
   "author": "Sanyog Gupta <sanyog@iitk.ac.in>",
   "scripts": {
     "serve": "vue-cli-service serve --open",
@@ -39,7 +39,7 @@
     "@vue/cli-plugin-pwa": "^3.4.0",
     "@vue/cli-service": "^3.4.0",
     "gh-pages": "^2.2.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.14.1",
     "sass-loader": "^7.1.0",
     "vue-cli-plugin-i18n": "^0.5.1",
     "vue-template-compiler": "^2.6.6"
